--- a/Rota/rota.component.css
+++ b/Rota/rota.component.css
@@ -10,18 +10,22 @@
   }
   
   table {
-    text-align: left;
+    text-align: center;
     border-collapse: separate;
     border-spacing: 0;
     border: 0px solid #ed1c40;
     margin: 0;
   }
-  
-  thead tr:first-child {
-    background: #CCE5FF;
-    color: black;
-    line-height: 40px;
-  }
+
+thead tr:first-child {
+  color: black;
+  line-height: 30px;
+  vertical-align: bottom;
+}
+
+thead tr:nth-child(2) {
+  line-height: 25px;
+}
   
   th:first-child,
   td:first-child {
@@ -30,7 +34,7 @@
   
   th {
     font-weight: 700;
-    border-bottom: 2px solid blue;
+    width: 70px;
   }
   
   thead tr:last-child th {
@@ -59,13 +63,28 @@
   td:first-child {
     padding-left: 10px;
   }
-  
-  .button {
-    color: #aaa;
-    cursor: pointer;
-  }
+
+.navbar-nav.navbar-center {
+  position: absolute;
+  left: 40%;
+}
+
+ul, li {
+  display: inline
+}
+
+
+.btn-primary {
+  cursor: pointer;
+  width: 100%;
+  padding: 1px 5px 1px 5px !important;
+  color: black;
+  background: #CCE5FF;
+  vertical-align: middle;
+}
 
   input {
     height: 25px;
-    width: 50px;
+    width: 35px;
+    text-align: center;
   }
