--- a/Departments/departments-menu/departments-menu.component.html
+++ b/Departments/departments-menu/departments-menu.component.html
@@ -1,23 +1,36 @@
-<table width="100%">
-        <thead>
-        <tr>
-          <th colspan="2" id="newDepartment" (click)="toggleShowNewDepartment()" class="button text-dark text-center">
-              <i *ngIf="showNewEmployee" class="material-icons align-middle">keyboard_arrow_right</i>
-              <i *ngIf="!showNewEmployee" class="material-icons align-middle">keyboard_arrow_down</i>
-              Create New Department</th>
-        </tr>
-        </thead>
-      
-      <div *ngIf="showNewDepartment">
-      <form [formGroup]="newDepartmentForm" (ngSubmit)="newDepartment()" novalidate>
-        <div *ngIf="validMessage != ''">
-          <h2 class="has-info">{{validMessage}}</h2>
-          </div>
-          <tr>
-            <td width="30%"><i class="material-icons">person_add</i></td>
-            <td><input type="text" class="form-control" formControlName="departmentName" placeholder="Name od the Department" required autofocus></td>
-          </tr>
-          <tr><td colspan="2"><button type="submit" class="btn btn-primary">Add</button></td></tr>
-      
-      </form>
+
+<div class="row dep-menu border border-primary rounded shadow-sm shadow-lg mt-2" (click)="toggleShowNewDepartment()">
+  <div class="col-md-8 offset-md-0">
+    <p>New&nbsp;Department</p>
+  </div>
+  <div class="col-md-2 offset-md-1">
+    <p>
+      <i *ngIf="showNewDepartment" class="material-icons align-middle">keyboard_arrow_right</i>
+      <i *ngIf="!showNewDepartment" class="material-icons align-middle">keyboard_arrow_down</i>
+    </p>
+  </div>
+</div>
+
+<div *ngIf="showNewDepartment" [@slideInOut] class="bg-white border border-primary rounded shadow-sm shadow-lg mt-3">
+  <form [formGroup]="newDepartmentForm" (ngSubmit)="newDepartment()" novalidate>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 offset-md-0" align="right">
+          <i class="material-icons">place</i>
+        </div>
+        <div class="col-md-10 offset-md-0">
+          <input type="text" class="form-control" formControlName="departmentName" placeholder="Name of the Department" required autofocus>
+        </div>
       </div>
+      <div class="col-md-4 offset-md-7">
+        <button type="submit" class="btn btn-primary">+ Add</button>
+      </div>
+      <div *ngIf="validMessage != ''" class="col-md-8 offset-md-2">
+        <div class="validMessage">
+          {{validMessage}}
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+
