--- a/Employees/employees-menu/employees-menu.component.html
+++ b/Employees/employees-menu/employees-menu.component.html
@@ -1,47 +1,101 @@
-<table width="100%">
-  <thead>
-  <tr>
-    <th colspan="2" id="newEmployee" (click)="toggleShowNewEmployee()" class="button text-dark text-center">
-        <i *ngIf="showNewEmployee" class="material-icons align-middle">keyboard_arrow_right</i>
-        <i *ngIf="!showNewEmployee" class="material-icons align-middle">keyboard_arrow_down</i>
-        Add New Employee</th>
-  </tr>
-  </thead>
 
-<div *ngIf="showNewEmployee">
-<form [formGroup]="newEmployeeForm" (ngSubmit)="newEmployee()" novalidate>
-  <div *ngIf="validMessage != ''">
-    <h2 class="has-info">{{validMessage}}</h2>
+
+<div *ngIf="showNewEmployee" [@slideInOut] class="bg-white border border-primary rounded shadow-sm shadow-lg mt-3" style="position: absolute; top: 100px;">
+  <form [formGroup]="newEmployeeForm" (ngSubmit)="newEmployee()" novalidate>
+    <div *ngIf="validMessage != ''">
+      <h2 class="has-info">{{validMessage}}</h2>
     </div>
-    <tr>
-      <td width="30%"><i class="material-icons">person_add</i></td>
-      <td><input type="text" class="form-control" formControlName="name" placeholder="Name" required autofocus></td>
-    </tr>
-    <tr>
-      <td><i class="material-icons">email</i></td>
-      <td><input type="text" class="form-control" formControlName="email" placeholder="Email address" required></td>
-    </tr>
-    <tr>
-      <td><i class="material-icons">phone</i></td>
-      <td><input type="text" class="form-control" formControlName="phoneNumber" placeholder="Phone number" required></td>
-    </tr>
-    <tr>
-      <td><i class="material-icons">place</i></td>
-      <td><select class="form-control" formControlName="department" (change)="departmentSelection($event.target.value)" required>
-        <option *ngFor="let dep of departments" [value]="dep.departmentName">{{dep.departmentName}}</option>
-      </select></td>
-    </tr>
-    <tr>
-      <td><i class="material-icons">record_voice_over</i></td>
-      <td><select class="form-control" formControlName="jobTitle" required>
-          <option *ngFor="let job of jobTitles" [value]="job.jobTitleName">{{job.jobTitleName}}</option>
-      </select></td>
-    </tr>
-    <tr>
-      <td><i class="material-icons card_travel">card_travel</i></td>
-      <td><input type="text" class="form-control" formControlName="holidayQuota" placeholder="Holiday Quota" required></td>
-    </tr>
-    <tr><td colspan="2"><button type="submit" class="btn btn-primary">Add</button></td></tr>
 
-</form>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-1 offset-md-1" align="right">
+          <i class="material-icons">person_add</i>
+        </div>
+        <div class="col-md-9 offset-md-1">
+          <input type="text" class="form-control" formControlName="name" placeholder="Name" required autofocus>
+        </div>
+        <div class="col-md-1 offset-md-1" align="right">
+          <i class="material-icons">email</i>
+        </div>
+        <div class="col-md-9 offset-md-1">
+          <input type="text" class="form-control" formControlName="email" placeholder="Email address">
+        </div>
+
+        <div class="col-md-1 offset-md-1" align="right">
+          <i class="material-icons">phone</i>
+        </div>
+        <div class="col-md-9 offset-md-1">
+          <input type="text" class="form-control" formControlName="phoneNumber" placeholder="Phone number">
+        </div>
+
+        <div class="col-md-1 offset-md-1" align="right">
+          <i class="material-icons">place</i>
+        </div>
+        <div class="col-md-9 offset-md-1">
+          <select class="form-control" formControlName="department" (change)="departmentSelection($event.target.value)" required>
+            <option *ngFor="let dep of departments" [value]="dep.departmentName">{{dep.departmentName}}</option>
+          </select>
+        </div>
+
+        <div class="col-md-1 offset-md-1" align="right">
+          <i class="material-icons">record_voice_over</i>
+        </div>
+        <div class="col-md-9 offset-md-1">
+          <select class="form-control" formControlName="jobTitle" required>
+            <option *ngFor="let job of jobTitles" [value]="job.jobTitleName">{{job.jobTitleName}}</option>
+          </select>
+        </div>
+
+        <div class="col-md-1 offset-md-1" align="right">
+          <i class="material-icons card_travel">card_travel</i>
+        </div>
+        <div class="col-md-9 offset-md-1">
+          <input type="text" class="form-control" formControlName="holidayQuota" placeholder="Holiday Quota" required>
+        </div>
+
+        <div class="col-md-4 offset-md-6">
+          <button type="submit" class="btn btn-primary">+ Add</button>
+        </div>
+
+      </div>
+    </div>
+  </form>
 </div>
+
+<div *ngIf="showEmployeesList" [@slideInOut] class="container bg-white border border-primary rounded shadow-sm shadow-lg mt-3" style="position: absolute; top: 100px;">
+  <ng-container *ngFor="let dep of departments | filterBy: _departmentFilter">
+    <div class="row">
+      <div class="col-md-6 offset-md-1">
+        {{dep.departmentName}}:
+      </div>
+      <div class="col-md-2 offset-md-1">
+        {{dep.employeesInDepartment.length}}
+      </div>
+    </div>
+  </ng-container>
+</div>
+
+<div class="row emp-menu border border-primary rounded shadow-sm shadow-lg mt-2" (click)="toggleEmployeesList()">
+  <div class="col-md-9 offset-md-0">
+    <p>No&nbsp;of&nbsp;Employees:&nbsp;{{employees.length}}</p>
+  </div>
+  <div class="col-md-1">
+    <p>
+      <i *ngIf="showEmployeesList" class="material-icons align-middle">keyboard_arrow_right</i>
+      <i *ngIf="!showEmployeesList" class="material-icons align-middle">keyboard_arrow_down</i>
+    </p>
+  </div>
+</div>
+
+<div class="row emp-menu border border-primary rounded shadow-sm shadow-lg mt-2" (click)="toggleShowNewEmployee()">
+  <div class="col-md-8 offset-md-0">
+    <p>New Employee</p>
+  </div>
+  <div class="col-md-2 offset-md-1">
+    <p>
+      <i *ngIf="showNewEmployee" class="material-icons align-middle">keyboard_arrow_right</i>
+      <i *ngIf="!showNewEmployee" class="material-icons align-middle">keyboard_arrow_down</i>
+    </p>
+  </div>
+</div>
+
