--- a/Employees/employees-menu/employees-menu.component.css
+++ b/Employees/employees-menu/employees-menu.component.css
@@ -9,59 +9,52 @@ body {
   color: #333;
 }
 
-table {
-  text-align: left;
-  line-height: 40px;
-  border-collapse: separate;
-  border-spacing: 0;
-  border: 0px solid #ed1c40;
-  margin: 0;
-}
-
-thead tr:first-child {
+.emp-menu {
   background: #CCE5FF;
   color: black;
-  height: 10px;
-}
-
-th:first-child,
-td:first-child {
-  padding: 0 0 0 0;
-}
-
-th {
-  font-weight: 700;
-  border-bottom: 2px solid blue;
-}
-
-thead tr:last-child th {
+  height: 40px;
+  width: 100%;
   border-bottom: 3px solid #ddd;
-}
-
-tbody tr:hover {
-  background-color: #f2f2f2;
-  cursor: default;
-}
-
-tbody tr:last-child td {
-  border: none;
-}
-
-tbody td {
-  border-bottom: 1px solid #ddd;
-}
-
-td:last-child {
-  text-align: left;
-  padding-right: 0;
-}
-
-td:first-child {
-  padding-left: 10px;
-  padding-top: 10px;
-}
-
-.button {
-  color: #aaa;
   cursor: pointer;
+  margin: 0px;
+  text-align: center;
 }
+
+.emp-menu:hover {
+    font-size: 17px;
+}
+
+.btn-primary {
+  cursor: pointer;
+  width: 100%;
+  padding: 1px 5px 1px 5px !important;
+  color: black;
+  background: #CCE5FF;
+}
+
+p {
+    margin-top: 8px;
+    font-weight: bold;
+}
+
+form input[type=text] {
+  width: 83%;
+  height: 30px;
+  font-size: 13px;
+  color: black;
+}
+
+form select {
+  width: 83%;
+  height: 30px;
+  font-size: 13px;
+  color: black;
+}
+
+.container {
+    padding: 10px 0 10px 0;
+}
+
+  .container * {
+    padding: 4px 5px 4px 5px;
+  }
