--- a/JobTitles/jobTitles.component.html
+++ b/JobTitles/jobTitles.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-2 border border-primary rounded shadow-sm bg-white ml-3 px-0 shadow-lg">
+    <div class="col-md-2 ml-3 px-0">
         <jobmenu [departments]="departments"></jobmenu>
         </div>
         <div class="col-md-8 mt-4 ml-4">
@@ -13,9 +13,7 @@
             <table style="width: 100%;">
                 <thead>
                 <tr>
-                    <th style="width: 10%;"></th>
-                    <th style="width: 5%;">ID</th>
-                    <th style="width: 15%;">Job Title</th>
+                    <th style="width: 50%;">Job Title</th>
                     <th style="width: 15%;">In Department</th>
                     <th style="width: 13%;">No Of Employees</th>
                     <th style="width: 10%;"></th>
@@ -23,35 +21,28 @@
                 </thead>
                 
                 <ng-container *ngFor="let j of jobTitles">
-                  <tr>      
+                  <tr>
                     <td valign="top">
-                        <i class="material-icons button edit" (click)="toggleEditJobTitle(j.id)">edit</i>
-                        <i class="material-icons button delete" (click)="deleteJobTitle(j.id)">delete</i>
-                    </td> 
-                    <td valign="top">
-                        {{ j.id }}
-                        <input *ngIf="showEditJobTitle && editThisJobTitle == j.id" type="hidden" style='width: 80%;' class="form-control" formControlName="id" (ngModelChange)="100" ngValue="100">
+                      <div *ngIf="!showEditJobTitle || editThisJobTitle != j.id">{{ j.jobTitleName }}</div>
+                      <input *ngIf="showEditJobTitle && editThisJobTitle == j.id" type="text" style='width: 80%;' class="form-control" formControlName="jobTitleName" [(ngModel)]="j.jobTitleName">
                     </td>
                     <td valign="top">
-                        {{ j.jobTitleName }}
-                        <input *ngIf="showEditJobTitle && editThisJobTitle == j.id" type="text" style='width: 80%;' class="form-control" formControlName="jobTitleName" value={{j.jobTitleName}}>
+                      <div *ngIf="!showEditJobTitle || editThisJobTitle != j.id">{{ j.inDepartment }}</div>
+                      <select *ngIf="showEditJobTitle && editThisJobTitle == j.id" class="form-control" formControlName="inDepartment" [ngModel]="j.inDepartment" required>
+                        <option *ngFor="let dep of departments" [value]="dep.departmentName">{{dep.departmentName}}</option>
+                      </select>
                     </td>
                     <td valign="top">
-                        {{ j.inDepartment }}
-                        <select *ngIf="showEditJobTitle && editThisJobTitle == j.id" class="form-control" formControlName="inDepartment" required>
-                            <option *ngFor="let dep of departments" [value]="dep.departmentName">{{dep.departmentName}}</option>
-                          </select>
+                      {{ j.numberOfEmployees }}
+                      <a *ngIf="j.numberOfEmployees > 0" [routerLink]="['../Employees']">Show</a>
                     </td>
                     <td valign="top">
-                        {{ j.numberOfEmployees }}
-                        <a *ngIf="j.numberOfEmployees > 0" [routerLink]="['../Employees']">Show</a>
+                      <button *ngIf="showEditJobTitle && editThisJobTitle == j.id" type="submit" class="btn btn-danger" (click)="editJobTitle(j.id)">Update</button>
+
+                      <i *ngIf="!showEditJobTitle || editThisJobTitle != j.id" class="material-icons button edit" (click)="toggleEditJobTitle(j.id)">edit</i>
+                      <i *ngIf="!showEditJobTitle || editThisJobTitle != j.id" class="material-icons button delete" (click)="deleteJobTitle(j.id)">delete</i>
                     </td>
-                   <td valign="bottom">
-                       &nbsp;
-                        <button *ngIf="showEditJobTitle && editThisJobTitle == j.id" type="submit" class="btn btn-danger" (click)="editJobTitle(j.id)">Update</button>
-                   </td>
-                  
-                </tr>
+                  </tr>
             </ng-container>
             </table>
             </form>
