--- a/JobTitles/jobTitles-menu/jobTitles-menu.component.css
+++ b/JobTitles/jobTitles-menu/jobTitles-menu.component.css
@@ -1,75 +1,75 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  color: #333;
+}
+
+.job-menu {
+  background: #CCE5FF;
+  color: black;
+  height: 40px;
+  width: 100%;
+  border-bottom: 3px solid #ddd;
+  cursor: pointer;
+  margin: 0px !important;
+  margin-top: 10px !important;
+}
+
+p {
+  margin-top: 8px;
+  font-weight: bold;
+  text-align: center;
+}
+
+form input[type=text] {
+  width: 83%;
+  height: 30px;
+  font-size: 13px;
+  color: black;
+}
+
+form select {
+  width: 83%;
+  height: 30px;
+  font-size: 13px;
+  color: black;
+}
+
+.container {
+  padding: 10px 0 10px 0;
+}
+
+  .container * {
+    padding: 4px 5px 4px 5px;
   }
-  
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    color: #333;
-  }
-  
-  table {
-    text-align: left;
-    line-height: 40px;
-    border-collapse: separate;
-    border-spacing: 0;
-    border: 0px solid #ed1c40;
-    margin: 0;
-  }
-  
-  thead tr:first-child {
-    background: #CCE5FF;
-    color: black;
-    height: 10px;
-  }
-  
-  th:first-child,
-  td:first-child {
-    padding: 0 0 0 0;
-  }
-  
-  th {
-    font-weight: 700;
-    border-bottom: 2px solid blue;
-  }
-  
-  thead tr:last-child th {
-    border-bottom: 3px solid #ddd;
-  }
-  
-  tbody tr:hover {
-    background-color: #f2f2f2;
-    cursor: default;
-  }
-  
-  tbody tr:last-child td {
-    border: none;
-  }
-  
-  tbody td {
-    border-bottom: 1px solid #ddd;
-  }
-  
-  td:last-child {
-    text-align: left;
-    padding-right: 0;
-  }
-  
-  td:first-child {
-    padding-left: 10px;
-    padding-top: 10px;
-  }
-  
-  .button {
-    color: #aaa;
-    cursor: pointer;
-  }
-  
-  .edit:hover {
-    color: #0a79df;
-  }
-  
-  .delete:hover {
-    color: #dc2a2a;
-  }
+
+.validMessage {
+  font-size: 13px;
+  color: green;
+}
+
+.button {
+  color: #aaa;
+  cursor: pointer;
+}
+
+.btn-primary {
+  cursor: pointer;
+  width: 100%;
+  padding: 1px 5px 1px 5px !important;
+  color: black;
+  background: #CCE5FF;
+}
+
+.edit:hover {
+  color: #0a79df;
+}
+
+.delete:hover {
+  color: #dc2a2a;
+}
