--- a/MenuBar/menu.bar.component.html
+++ b/MenuBar/menu.bar.component.html
@@ -1,17 +1,39 @@
 <div class="container-fluid border border-primary rounded alert-primary font-weight-bold shadow-lg">
-    <nav class="nav d-flex shift">
-        <ul class="nav nav-pills navbar-right">
-            <li class="nav-item px-2"><a routerLink="Home"><i class="material-icons" style="font-size: 25px; vertical-align: middle !important;">home</i></a></li>
-            <li class="nav-item"><a routerLink="RotaModule">Rota</a></li>
-        </ul>
-        <ul class="nav ml-auto">
-            <li class="nav-item px-3"><a class="mid_menu" routerLink="Employees"><i class="material-icons px-2 mb-2" style="vertical-align: top !important;">group</i>Employees</a></li>
-            <li class="nav-item px-3"><a class="mid_menu" routerLink="Departments"><i class="material-icons px-1" style="vertical-align: middle !important;">edit_location</i>Departments</a></li>
-            <li class="nav-item px-3"><a class="mid_menu" routerLink="JobTitles"><i class="material-icons px-1" style="vertical-align: middle !important;">record_voice_over</i>Job Titles</a></li>
-        </ul>
-        <ul class="nav ml-auto">
-            <li class="nav-item"><a routerLink="" class="log_out" (click)="logout()"><i class="material-icons large px-1" >exit_to_app</i>Log Out</a></li>
-        </ul>
-    </nav>
+  <nav class="nav d-flex shift">
+    <ul class="nav nav-pills navbar-right">
+      <li class="nav-item px-2"><a routerLink="Home"><i class="material-icons" style="font-size: 25px; vertical-align: middle !important;">home</i></a></li>
+      <li class="nav-item"><a routerLink="RotaModule">Rota</a></li>
+    </ul>
+    <div (mouseenter)="showToolsMenu()" (mouseleave)="hideToolsMenu()" style="position: absolute; left: 50%;">Tools</div>
+    <!--<ul class="nav ml-auto" *ngIf="isToolsMenuVisible">
+      <li class="nav-item px-3"><a class="mid_menu" routerLink="Employees"><i class="material-icons px-2 mb-2" style="vertical-align: top !important;">group</i>Employees</a></li>
+      <li class="nav-item px-3"><a class="mid_menu" routerLink="Departments"><i class="material-icons px-1" style="vertical-align: middle !important;">edit_location</i>Departments</a></li>
+      <li class="nav-item px-3"><a class="mid_menu" routerLink="JobTitles"><i class="material-icons px-1" style="vertical-align: middle !important;">record_voice_over</i>Job Titles</a></li>
+      <li class="nav-item px-3"><a class="mid_menu" routerLink="Shifts"><i class="material-icons px-1" style="vertical-align: middle !important;">record_voice_over</i>Shifts</a></li>
+    </ul>-->
+
+
+    <ul class="nav ml-auto">
+      <li class="nav-item"><a routerLink="" class="log_out" (click)="logout()"><i class="material-icons large px-1">exit_to_app</i>Log Out</a></li>
+    </ul>
+  </nav>
 </div>
+
+
+<div *ngIf="isToolsMenuVisible || isToolsMenuIn" (mouseenter)="showToolsMenuIn()" (mouseleave)="hideToolsMenuOut()" class="tools-menu border border-primary rounded font-weight-bold shadow-lg">
+  <div class="row">
+    <div class="col-md-10 offset-md-1 mt-2">
+      <a class="mid_menu" routerLink="Employees"><i class="material-icons px-2 mb-2" style="vertical-align: top !important;">group</i>Employees</a>
+    </div>
+    <div class="col-md-10 offset-md-1 mt-0 ml-4">
+      <a class="mid_menu" routerLink="Departments"><i class="material-icons px-1" style="vertical-align: middle !important;">edit_location</i>Departments</a>
+    </div>
+    <div class="col-md-10 offset-md-1 mt-2 ml-4">
+      <a class="mid_menu" routerLink="JobTitles"><i class="material-icons px-1" style="vertical-align: middle !important;">record_voice_over</i>Job Titles</a>
+    </div>
+    <div class="col-md-10 offset-md-1 mt-2 mb-2 ml-4">
+      <a class="mid_menu" routerLink="Shifts"><i class="material-icons px-1" style="vertical-align: middle !important;">record_voice_over</i>Shifts</a>
+    </div>
+  </div>
+  </div>
 
